third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/array/no-comma-3.stderr
TOML parse error at line 1, column 22
  |
1 | no-comma-3 = [ 1 #,]
  |                      ^
invalid array
expected `]`
